--- a/options.html
+++ b/options.html
@@ -7,145 +7,72 @@
 body{
 }
 p{
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 #wrap {
-	width: 600px;
-	margin: 0 auto;
+    width: 600px;
+    margin: 0 auto;
 }
 h1 {
-	border-radius: 3px;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(95,124,170,1)), to(rgba(37,67,127,1)));
-	text-align: center;
-	border-color: hsl(0,0%,85%);
-	color: white;
-	text-shadow: 1px 1px 1px rgba(17,47,107,1);
-	padding: 0.5em;
-	-webkit-box-shadow: 1px 1px 1px gray;
+    border-radius: 3px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(95,124,170,1)), to(rgba(37,67,127,1)));
+    text-align: center;
+    border-color: hsl(0,0%,85%);
+    color: white;
+    text-shadow: 1px 1px 1px rgba(17,47,107,1);
+    padding: 0.5em;
+    -webkit-box-shadow: 1px 1px 1px gray;
 }
 h2 {
-	font-size: 100%;
-	margin: 0 0 1em 0;
-	color: rgba(37,67,127,1);
+    font-size: 100%;
+    margin: 0 0 1em 0;
+    color: rgba(37,67,127,1);
 }
 .group {
-	border-radius: 3px;
-	border: 1px solid rgba(95,124,170,1);
-	-webkit-box-shadow: 1px 1px 1px silver;
-	padding: 1em;
-	margin-bottom: 20px;
+    border-radius: 3px;
+    border: 1px solid rgba(95,124,170,1);
+    -webkit-box-shadow: 1px 1px 1px silver;
+    padding: 1em;
+    margin-bottom: 20px;
 }
 div.item {
-	margin-left: 1em;
+    margin-left: 1em;
 }
 .item {
-	margin-top: 1em;
+    margin-top: 1em;
 }
 fieldset {
-	border-radius: 3px;
-	border: 1px solid silver;
+    border-radius: 3px;
+    border: 1px solid silver;
 }
 input[type=range]{
-	width: 20em;
+    width: 20em;
 }
 .value {
-	display: inline-block;
-	border-radius: 3px;
-	border: 1px solid silver;
-	width: 5em;
-	text-align: right;
+    display: inline-block;
+    border-radius: 3px;
+    border: 1px solid silver;
+    width: 5em;
+    text-align: right;
 }
 .tips {
-	color: gray;
-	display: block;
+    color: gray;
+    display: block;
 }
 .tips:before {
-	content:'*';
+    content:'*';
 }
 #NonDisplayURL {
-	list-style-type: none;
-	padding-left: 0;
+    list-style-type: none;
+    padding-left: 0;
 }
 input.url {
-	width: 20em;
+    width: 20em;
 }
 </style>
-<script type="text/javascript" src="options.js"></script>
-<script type="text/javascript">
-var options = Options.load();
-
-window.addEventListener('load', function(e){
-	Array.prototype.slice.call(document.querySelectorAll('input[type="checkbox"]')).forEach(function(elm) {
-		elm.checked = options[elm.id];
-		elm.addEventListener('click', function(e){
-			options[e.target.id] = e.target.checked;
-			Options.save(options);
-		}, false);
-	});
-	Array.prototype.slice.call(document.querySelectorAll('input[type="range"]')).forEach(function(elm) {
-		elm.value = options[elm.id];
-		var output = document.getElementById(elm.id + '_val');
-		output.textContent = elm.value;
-		elm.addEventListener('change', function(e){
-			options[e.target.id] = parseInt(e.target.value, 10);
-			output.textContent = e.target.value;
-			Options.save(options);
-		}, false);
-	});
-	Array.prototype.slice.call(document.querySelectorAll('input[name="Sort"]')).forEach(function(elm) {
-		var sort = elm.id.split('_');
-		if (options.Sort == sort[1] && options.Order == sort[2]) {
-			elm.checked = true;
-		}
-		elm.addEventListener('click', function(e){
-			var sort = e.target.id.split('_');
-			options.Sort = sort[1];
-			options.Order = sort[2];
-			Options.save(options);
-		}, false);
-	});
-
-	// Non-display URL
-	var AddNonDisplayURL = function(item, index) {
-		var li = document.createElement('li');
-		var input = document.createElement('input');
-		input.type = 'text';
-		input.className = 'url';
-		input.value = item;
-		input.addEventListener('input',function(e){
-			options.NonDisplayURL[index] = input.value;
-			Options.save(options);
-		}, false);
-		li.appendChild(input);
-		var del = document.createElement('button');
-		del.textContent = 'Del';
-		del.addEventListener('click',function(e){
-			li.parentNode.removeChild(li);
-			options.NonDisplayURL = options.NonDisplayURL.filter(function(item, i){
-				return (i != index);
-			});
-			Options.save(options);
-		}, false);
-		li.appendChild(del);
-		list.appendChild(li);
-	};
-
-	var list = document.getElementById('NonDisplayURL');
-	var text = document.getElementById('NonDisplayURL_text');
-	document.getElementById('NonDisplayURL_add').addEventListener('click', function(e) {
-		var url = document.getElementById('NonDisplayURL_text').value;
-		if (url) {
-			AddNonDisplayURL(text.value, options.NonDisplayURL.length);
-			options.NonDisplayURL.push(url);
-			Options.save(options);
-			text.value = '';
-		}
-	}, false);
-	options.NonDisplayURL.forEach(AddNonDisplayURL);
-
-}, false);
-</script>
+<script src="options.js"></script>
+<script src="options_page.js"></script>
 </head>
 <body>
   <div id="wrap">
@@ -173,7 +100,7 @@ window.addEventListener('load', function(e){
       </fieldset>
     </div>
     <div class="group">
-      <h2>Non-display URL (Regular expression)</h2>
+      <h2>Exclude URLs (Regular expression)</h2>
         <ul id="NonDisplayURL"></ul>
         <input type="text" id="NonDisplayURL_text" class="url" value="" /><button id="NonDisplayURL_add">Add</button>
     </div>
