refactor: comprehensive code refactoring

--- a/popup.html
+++ b/popup.html
@@ -3,137 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Pop-up History</title>
-<style>
-body {
-    font-size: 10pt;
-    margin:0;
-    padding:0;
-}
-#control {
-    border-color: hsl(0,0%,85%);
-    background-color: rgba(95,124,170,1);
-    padding: 5px;
-    box-shadow: 0px 1px 2px gray;
-    display: flex;
-    justify-content: space-between;
-}
-h1 {
-    background: url(history.png) no-repeat 0px 50%;
-    padding-left: 26px;
-    font-size: 16pt;
-    margin: 0;
-    color: white;
-    text-shadow: 1px 1px 1px rgba(17,47,107,1);
-    cursor: pointer;
-}
-#search {
-}
-#search:after {
-}
-#query{
-    width: 200px;
-    padding: 4px;
-}
-#entries {
-    width: 400px;
-    padding: 5px;
-    margin: 2px 0 0 0;
-    max-height: 500px;
-    overflow: auto;
-    list-style-type: none;
-    list-style-position: inside;
-}
-#entries:empty {
-    text-align: center;
-}
-#entries:empty:after {
-    content: 'No results.';
-}
-#entries.loading:after {
-    display: block;
-    text-align: center;
-    content: url(loading.gif) no-repeat 50% 10px;
-}
-
-#entries>li {
-    position:relative;
-    border-radius: 2px;
-}
-#entries>li:hover, #entries>li.current {
-    border-color: hsl(0,0%,85%);
-    background-color: hsl(0,0%,90%);
-}
-#entries>li>a {
-    padding: 5px 20px 5px 2px;
-    display: block;
-    text-decoration: none;
-    color: #555;
-}
-#entries>li:hover>a, #entries>li.current>a {
-    color: black;
-}
-#entries>li.hidden {
-    display: none;
-}
-.title {
-    padding: 0px 10px 0px 20px;
-    display: block;
-    background: no-repeat 0px 0px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    min-height: 2.5em;
-}
-.count {
-    position:absolute;
-    top: 2px;
-    right: 2px;
-    background: gray;
-    border-radius: 3px;
-    padding: 0 2px;
-    color: white;
-}
-.date {
-    position:absolute;
-    bottom: 2px;
-    right: 2px;
-}
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #121212;
-        color: #e0e0e0;
-    }
-    #control {
-        border-color: hsl(0,0%,30%);
-        background-color: rgba(95,124,170,0.5);
-        box-shadow: 0px 1px 2px black;
-    }
-    input[type=search]:focus {
-        background:#000;
-    }
-    input[type=search] {
-        background-color: #222;
-        color: #ddd;
-        border: 1px solid rgba(255,255,255,0.2);
-    }
-    #entries>li {
-    }
-    #entries>li:hover, #entries>li.current {
-        background-color: hsl(0,0%,20%);
-    }
-    #entries>li>a {
-        color: #e0e0e0;
-    }
-    #entries>li:hover>a, #entries>li.current>a {
-        color: #ffffff;
-    }
-    .count {
-        background: #555;
-    }
-}
-</style>
-<script src="options.js"></script>
-<script src="popup.js"></script>
+<link rel="stylesheet" href="css/popup.css">
+<script type="module" src="js/popup.js"></script>
 </head>
 <body>
 <div id="main">
