--- a/options.html
+++ b/options.html
@@ -3,76 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Pop-up History Option</title>
-<style>
-body{
-}
-p{
-    margin: 0;
-    padding: 0;
-}
-#wrap {
-    width: 600px;
-    margin: 0 auto;
-}
-h1 {
-    border-radius: 3px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(95,124,170,1)), to(rgba(37,67,127,1)));
-    text-align: center;
-    border-color: hsl(0,0%,85%);
-    color: white;
-    text-shadow: 1px 1px 1px rgba(17,47,107,1);
-    padding: 0.5em;
-    -webkit-box-shadow: 1px 1px 1px gray;
-}
-h2 {
-    font-size: 100%;
-    margin: 0 0 1em 0;
-    color: rgba(37,67,127,1);
-}
-.group {
-    border-radius: 3px;
-    border: 1px solid rgba(95,124,170,1);
-    -webkit-box-shadow: 1px 1px 1px silver;
-    padding: 1em;
-    margin-bottom: 20px;
-}
-div.item {
-    margin-left: 1em;
-}
-.item {
-    margin-top: 1em;
-}
-fieldset {
-    border-radius: 3px;
-    border: 1px solid silver;
-}
-input[type=range]{
-    width: 20em;
-}
-.value {
-    display: inline-block;
-    border-radius: 3px;
-    border: 1px solid silver;
-    width: 5em;
-    text-align: right;
-}
-.tips {
-    color: gray;
-    display: block;
-}
-.tips:before {
-    content:'*';
-}
-#NonDisplayURL {
-    list-style-type: none;
-    padding-left: 0;
-}
-input.url {
-    width: 20em;
-}
-</style>
-<script src="options.js"></script>
-<script src="options_page.js"></script>
+<link rel="stylesheet" href="css/options.css">
+<script type="module" src="js/options_page.js"></script>
 </head>
 <body>
   <div id="wrap">
